feat: use `XsdProp` instead of `AasPropValue`